--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3899,3 +3899,49 @@ ol {
 .hidden {
     display: none;
 }
+
+/*trang cam on*/
+.thank{
+	 padding: 50px; 
+	
+}
+.thank-you-container {
+    
+	max-width: 900px;
+	margin: 0 auto;
+	background-color: #f8f9fa;
+	padding: 30px;
+	border-radius: 5px;
+	box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+.thank-item{
+	text-align: center;  
+}
+.thank-item2 {
+	border: 2px solid #dbd3d3;
+	border-radius: 5px;
+  }
+
+h1 {
+	color: #333;
+	font-size: 24px;
+	margin-bottom: 20px;
+	font-weight: 700;
+}
+
+p {
+	margin-bottom: 10px;
+}
+
+/*detal_product*/
+.button_detail {
+    background-color: transparent;
+    transition: background-color 0.3s ease;
+}
+.button_detail:hover{
+	background-color: black;
+}
+
+.selected {
+    border: 2px solid black;
+}
