--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1678,6 +1678,9 @@ ol {
   #yellow:hover {
 	background-color: #FFFF00;
   }
+  #green:hover {
+	background-color: green;
+  }
 
   #black:checked {
 	background-color: #000000;
@@ -1690,6 +1693,9 @@ ol {
   }
   #blue:checked {
 	background-color: #0033FF;
+  }
+  #green:checked {
+	background-color: green;
   }
 
 
@@ -2087,20 +2093,19 @@ ol {
 /*Màu detail*/
 .product__details__widget ul li .color__btn label {
 	font-size: 14px;
-	
+	border: 1px solid #000000;
 	text-transform: uppercase;
 	cursor: pointer;
 	margin-right: 10px;
 	display: inline-block;
 	margin-bottom: 0;
 	font-weight: 500;
-	border: none;
     padding: 5px 10px;
     border-radius: 15px;
 	
 
 	/* Áp dụng hiệu ứng chuyển đổi */
-	transition: color 0.5s ease;
+	transition: border 0.1s ease;
 }
 
 .product__details__widget ul li .color__btn label:last-child {
@@ -2108,10 +2113,7 @@ ol {
 }
 
 .product__details__widget ul li .color__btn label.active {
-	/* color: #eb0f0f; */
-	font-weight: 700;
-	color: #000000;
-	border: 1px solid #000000;
+	border: 3px solid #0066FF;
 }
 
 .product__details__widget ul li .color__btn label input {
@@ -2128,29 +2130,29 @@ ol {
  
   
   /* Định nghĩa màu nền cho từng nhãn dựa trên giá trị màu */
-  /* .color__btn label[for="RED-btn"] {
+  .color__btn label[for="red-btn"] {
 	background-color: rgb(225, 52, 52);
 	color:rgb(225, 52, 52) ;
   }
   
-  .color__btn label[for="YELLOW-btn"] {
+  .color__btn label[for="yellow-btn"] {
 	background-color: #FFFF00;
 	color:#FFFF00;
   }
   
-  .color__btn label[for="BLUE-btn"] {
+  .color__btn label[for="blue-btn"] {
 	background-color: rgb(0,191,255);
 	color:rgb(0,191,255) ;
   }
-  .color__btn label[for="BLACK-btn"] {
+  .color__btn label[for="black-btn"] {
 	background-color: #000000;
 	color: #000000;
   }
-  .color__btn label[for="WHITE-btn"] {
+  .color__btn label[for="white-btn"] {
 	background-color: #ffffff;
 	color: #ffffff;
   }
-   */
+  
 /*Size detail /////////////////////////////*/
 .product__details__widget ul li .size__btn label {
 	font-size: 14px;
